# prueba-backend

./: README.md  index.html  manage.py  pyproject.toml  requirements.txt  vercel.json
backend/: settings.py  urls.py  views.py
backend/settings/: base.py  dev.py  prod.py
frontend/: index.html
interfaz/: apps.py  urls.py  views.py
static/css/: detalle_usuario.css  usuarios.css
static/js/: detalle_usuario.js  usuarios.js
templates/: detalle_usuario.html  redirect.html  usuarios.html
usuariosAPI/: apps.py  models.py  serializers.py  urls.py  views.py
usuariosAPI/migrations/: 0001_initial.py
