[tool.poetry]
name = "mbinnovations"
version = "0.1.0"
description = "Prueba práctica para el reclutamiento para el perfil backend"
authors = ["chrisnaibaf <chris.naibaf@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
django = "^4.2"
djangorestframework = "^3.14.0"
django-extensions = "^3.2.1"
python-decouple = "^3.8"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
